# pyclaw

./: .env.example  .gitignore  README.md  dump-openxbot-null-202602240834.sql  openxbot.json  pyproject.toml  run.sh
app/: lifespan.py  main.py  workflow.py
app/agents/: main_agent.py  prompt.py  prompt_en.py.bak
app/agents/tools/: cron_tools.py  fetch_url.py  load_skill.py
app/channels/: chat_service.py
app/channels/routers/: __init__.py  chat.py  extensions.py
app/cli/: __init__.py  __main__.py  chat.py  cli.py  cron.py
app/cron/: cron_manage.py
app/extensions/: __init__.py  loader.py  registry.py
app/memory/: manager.py
app/state/: agent_state.py
app/tools/: hybrid_search.py
extensions/: README.md
extensions/bash_tool/: extension.py
extensions/example/: extension.py
extensions/shell/: extension.py
extensions/web_search/: extension.py
setup/: db_setup.py  generate_model.py  memory_setup.py  vector_setup.py
skills/coding-agent/: SKILL.md
skills/weather/: SKILL.md
workspace/: AGENTS.md  BOOTSTRAP.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
